--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="calc__buttons">
             </div>
         </div>
-        <script src="./index.js"></script>
+        <script type='module' src="./index.js"></script>
     </div>
 </body>
 </html>
